--- a/slnAllShow/prjAllShow.Backend/Resources/Resources/SharedResources.en-US.resx
+++ b/slnAllShow/prjAllShow.Backend/Resources/Resources/SharedResources.en-US.resx
@@ -123,6 +123,39 @@
   <data name="EmailPWDError" xml:space="preserve">
     <value>Email or Password Error</value>
   </data>
+  <data name="Employee.EmpAccount" xml:space="preserve">
+    <value>Account</value>
+  </data>
+  <data name="Employee.EmpAccountState" xml:space="preserve">
+    <value>Account State</value>
+  </data>
+  <data name="Employee.EmpBirth" xml:space="preserve">
+    <value>Birth</value>
+  </data>
+  <data name="Employee.EmpEmail" xml:space="preserve">
+    <value>Email</value>
+  </data>
+  <data name="Employee.EmpName" xml:space="preserve">
+    <value>Name</value>
+  </data>
+  <data name="Employee.EmpNo" xml:space="preserve">
+    <value>Emp No</value>
+  </data>
+  <data name="Employee.EmpPwd" xml:space="preserve">
+    <value>Password</value>
+  </data>
+  <data name="Employee.EmpSex" xml:space="preserve">
+    <value>Sex</value>
+  </data>
+  <data name="Employee.EmpTel" xml:space="preserve">
+    <value>Phone</value>
+  </data>
+  <data name="Employee.HireDate" xml:space="preserve">
+    <value>Hire Date</value>
+  </data>
+  <data name="Employee.LeaveDate" xml:space="preserve">
+    <value>Leave Date</value>
+  </data>
   <data name="Field_MaxLength" xml:space="preserve">
     <value>{0} cannot be longer than {1} characters</value>
   </data>
