測試Modal彈出視窗，商店類別新增修改用Modal+Iframe彈出視窗，CRUD用axios呼叫API做存取，Layout對baseInstance加上RequestVerificationToken使功能正常運行

--- a/slnAllShow/prjAllShow.Backend/Resources/Resources/SharedResources.zh-TW.resx
+++ b/slnAllShow/prjAllShow.Backend/Resources/Resources/SharedResources.zh-TW.resx
@@ -234,6 +234,9 @@
   <data name="RegisterViewModel.Password" xml:space="preserve">
     <value>密碼</value>
   </data>
+  <data name="ShClass.ShClassName" xml:space="preserve">
+    <value>商店類別名稱</value>
+  </data>
   <data name="Shop.EmpNo" xml:space="preserve">
     <value>審核人編號</value>
   </data>
