--- a/slnAllShow/prjAllShow.Backend/Resources/Resources/SharedResources.en-US.resx
+++ b/slnAllShow/prjAllShow.Backend/Resources/Resources/SharedResources.en-US.resx
@@ -234,6 +234,9 @@
   <data name="RegisterViewModel.Password" xml:space="preserve">
     <value>Password</value>
   </data>
+  <data name="ShClass.ShClassName" xml:space="preserve">
+    <value>Shop Class Name</value>
+  </data>
   <data name="Shop.EmpNo" xml:space="preserve">
     <value>Emp No</value>
   </data>
